<resources>
    <string name="app_name">JobsCoding</string>
    <string name="about">About</string>
    <string name="image_product">Image Product</string>
    <string name="splash_screen_icon">Splash Screen Icon</string>
    <string name="kirim_lamaran">Kirim Lamaran</string>
    <string name="mobile_developer">Mobile Developer</string>
    <string name="_1_3_tahun">1 - 3 Tahun</string>
    <string name="_10_50_karyawan">10-50 Karyawan</string>
    <string name="sektor_bisnis_technology_and_media">Sektor Bisnis: Technology and Media</string>
    <string name="rp3_500_000_rp6_000_000_per_bulan">Rp3.500.000 - Rp6.000.000 per bulan</string>
    <string name="todo">TODO</string>
    <string name="desc">1. Melakukan pengetesan kode program, membuat perintah Query SQL, membuat Program Test Script.&#10;2. Melakukan Implementasi program pada fase Implementation / Golive Project.&#10;3. Melakukan Implementasi program pada fase Implementation / Golive Project. Membuat dokumen - dokumen perancangan perangkat lunak menggunakan Microsoft Excell, Microsoft Word dan atau Google Sheet/Docs.&#10;4. Berkoordinasi dengan System Analyst dan Project Manager.&#10;5. Pengalaman 2 - 5 tahun dalam bidang yang sama&#10;6. Pernah / Menguasai Automation Testing&#10;7. Menguasai Microsoft Excel/Word, Power Designer / DB Designer Tools&#10;8. Mudah memahami proses bisnis aplikasi&#10;9. Menguasai Relational Database dan melakukan beberapa perintah Query SQL.&#10;10. Memiliki keahlian dalam membaca rancangan system perangkat lunak dengan baik.&#10;11. Memahami Metode Object Oriented dengan baik&#10;12. Advance database query&#10;13. Terbiasa implementasi SDLC Agile Scrum&#10;14. Mampu berkomunikasi dengan baik</string>
    <string-array name="title">
        <item>Mobile Developer</item>
        <item>SQL Developer</item>
        <item>Fullstack Developer</item>
        <item>.NET Developer</item>
        <item>Backend Developer</item>
        <item>Odoo Developer</item>
        <item>Devops Engineer</item>
        <item>System Administrator </item>
        <item>Backend Developer (Ruby on Rails)</item>
        <item>Frontend Developer (ExtJS) </item>
        <item>Lead Developer</item>
        <item>Freelance Back End Developer</item>
        <item>Freelance Front End Developer </item>
        <item>Senior Quality Assurance</item>
        <item>Senior Back-End Developer</item>
        <item>Senior Front-End Developer</item>
        <item>Back End Developer (BED)</item>
        <item>React Native Developer</item>
        <item>Senior IT Quality Assurance Engineer</item>
        <item>VB.Net Developer</item>
        <item>Odoo Developer</item>
        <item>Account Executive</item>
        <item>Web Developer</item>
        <item>IT Staff and Programmer Team for Mobile Apps and Web Development </item>
        <item>Internship Front-end Developer</item>
        <item>Internship Full-stack Developer</item>
        <item>Project Manager</item>
        <item>Full-Stack Developer</item>
        <item>Junior Back-End Developer</item>
        <item>Internship Android Developer</item>
        <item>Odoo Developer</item>
        <item>Backend Developer</item>
        <item>Business Development</item>
        <item>Web Developer </item>
        <item>Quality Assurance Engineer</item>
        <item>Senior Java Developer</item>
        <item>Account Executive (AE)</item>
        <item>Video Editor </item>
        <item>Website Developer</item>
        <item>Senior System Analyst</item>
        <item>Senior .NET / NodeJS Developer</item>
        <item>iOS Developer</item>
        <item>Programmer</item>
        <item>Sr. Software Development Team Lead</item>
        <item>Devops</item>
        <item>.Net Developer</item>
        <item>Backend Java Developer</item>
        <item>Data Analytics Manager</item>
        <item>Product Owner </item>
        <item>QA Engineer Katalon</item>
        <item>Information Technology Project Manager</item>
        <item>Frontend Developer (Angular)</item>
        <item>Data Analyst</item>
        <item>System Analyst</item>
        <item>React Js Frontend Developer</item>
        <item>Python Backend Developer</item>
        <item>Full Stack Developer</item>
        <item>Mid IT Quality Assurance (Software Tester) (Batam)</item>
        <item>Backend Developer </item>
        <item>IT Business Analyst</item>
        <item>Customer Support Executive (IT) (Bandung &amp;  Batam)</item>
        <item>DevOps-Enginner</item>
        <item>System Analyst (Internship)</item>
        <item>Assistant Project Manager (Internship)</item>
        <item>Web Developer</item>
        <item>Java Based Full Stack Web Developer</item>
        <item>Product Owner</item>
        <item>Business Analyst</item>
        <item>IT Helpdesk</item>
        <item>Mobile Developer</item>
        <item>Software Quality Assurance</item>
        <item>Outsystems Developer</item>
        <item>RPA Developer</item>
        <item>Full-Stack Developer</item>
        <item>Software Engineer</item>
    </string-array>
    <string-array name="company_name">
        <item>PT. Kwadran Lima Mitra Kaya Solusi</item>
        <item>PT. Kwadran Lima Mitra Kaya Solusi</item>
        <item>PT. Kwadran Lima Mitra Kaya Solusi</item>
        <item>PT. Kwadran Lima Mitra Kaya Solusi</item>
        <item>PT. Kwadran Lima Mitra Kaya Solusi</item>
        <item>PT. Kwadran Lima Mitra Kaya Solusi</item>
        <item>PT Niaga Expert Teknologi</item>
        <item>PT Niaga Expert Teknologi</item>
        <item>PT Niaga Expert Teknologi</item>
        <item>PT Niaga Expert Teknologi</item>
        <item>Newus Technology</item>
        <item>Newus Technology</item>
        <item>Newus Technology</item>
        <item>ZettaByte Pte Ltd</item>
        <item>ZettaByte Pte Ltd</item>
        <item>ZettaByte Pte Ltd</item>
        <item>PT Rect Media Komputindo</item>
        <item>PT Techtiera Services Indonesia</item>
        <item>PT Tenaga Kanggo </item>
        <item>PT. INSAN DAYA TEKNOLOGI</item>
        <item>PT Arkana Solusi Digital</item>
        <item>PT Himalaya Indo Karya</item>
        <item>PT Himalaya Indo Karya</item>
        <item>PT SIKI Revolusi Inovasi </item>
        <item>Kode Aplikasi Indonesia </item>
        <item>Kode Aplikasi Indonesia </item>
        <item>Radya Digital</item>
        <item>Hexavara Technology</item>
        <item>PT Idekreatif Menusa Teknologi</item>
        <item>Kode Aplikasi Indonesia </item>
        <item>PT Altech Omega Andalan</item>
        <item>PT Altech Omega Andalan</item>
        <item>Radya Digital</item>
        <item>PT Adi Pragata Logistik</item>
        <item>PT ARKAMAYA</item>
        <item>PT Sellon Data Indonesia</item>
        <item>PT Rect Media Komputindo</item>
        <item>PT Rect Media Komputindo</item>
        <item>PT Gema Mulia Semesta (Souvia)</item>
        <item>PT EBConnection Indonesia</item>
        <item>PT EBConnection Indonesia</item>
        <item>Kode Aplikasi Indonesia </item>
        <item>PT Alfatih Solusindo Technology</item>
        <item>PT Flexi Dev Indonesia</item>
        <item>PT. INSAN DAYA TEKNOLOGI</item>
        <item>PT. INSAN DAYA TEKNOLOGI</item>
        <item>PT. INSAN DAYA TEKNOLOGI</item>
        <item>PT. INSAN DAYA TEKNOLOGI</item>
        <item>PT. INSAN DAYA TEKNOLOGI</item>
        <item>PT. INSAN DAYA TEKNOLOGI</item>
        <item>PT Rect Media Komputindo</item>
        <item>PT Flexi Dev Indonesia</item>
        <item>PT. INSAN DAYA TEKNOLOGI</item>
        <item>PT. INSAN DAYA TEKNOLOGI</item>
        <item>Geekgarden Software House</item>
        <item>Geekgarden Software House</item>
        <item>PEDAMELAN.COM</item>
        <item>PT InnoArk Servis Internasional</item>
        <item>PT EIGEN TRI MATHEMA</item>
        <item>PT Flexi Dev Indonesia</item>
        <item>PT InnoArk Servis Internasional</item>
        <item>PT EIGEN TRI MATHEMA</item>
        <item>PT Sekawan Media Informatika</item>
        <item>PT Sekawan Media Informatika</item>
        <item>CV.INDOSOFT</item>
        <item>Sofco Graha</item>
        <item> PT Evolusi Teknologi Solusi (EVOTEKS)</item>
        <item> PT Evolusi Teknologi Solusi (EVOTEKS)</item>
        <item> PT Evolusi Teknologi Solusi (EVOTEKS)</item>
        <item> PT Evolusi Teknologi Solusi (EVOTEKS)</item>
        <item> PT Evolusi Teknologi Solusi (EVOTEKS)</item>
        <item> PT Evolusi Teknologi Solusi (EVOTEKS)</item>
        <item> PT Evolusi Teknologi Solusi (EVOTEKS)</item>
        <item> PT Evolusi Teknologi Solusi (EVOTEKS)</item>
        <item>OCBC Indonesia</item>
    </string-array>
</resources>